# paper--code

./: .gitignore  README.md  pyproject.toml
src/: heads.py  mad.py  modeling.py  utils.py
src/tv_datasets/: beans.py  cars.py  catsdogs.py  cifar10.py  cifar100.py  common.py  dtd.py  emnist.py  eurosat.py  fashionmnist.py  fer2013.py  flowers102.py  food101.py  fruits360.py  garbage.py  intelimages.py  kmnist.py  kvasir.py  landscape.py  mangoleafbd.py  mnist.py  oxfordpets.py  pcam.py  registry.py  sst2.py  stl10.py  sun397.py  templates.py  vegetables.py  weather.py
